# ee450AlliInOne

./: CMakeLists.txt  ClientA.cpp  ClientB.cpp  README  Readme.txt  block1.txt  block2.txt  check.sh  clientA  clientA.cpp  clientB  clientB.cpp  main.cpp  makefile  serverA  serverA.cpp  serverB  serverB.cpp  serverC  serverC.cpp  serverM  serverM.cpp  stats.sh  transfer.sh  txlist.sh
util/: fileOperation.cpp  fileOperation.h  stasInfo.cpp  stasInfo.h  tcpHelper.cpp  tcpHelper.h  transferItem.cpp  transferItem.h  udpHelper.cpp  udpHelper.h
